saturn-program-macros/tests/compile_fail/duplicate_bitcoin_transaction_key.stderr
error: duplicate `bitcoin_transaction` key
  --> tests/compile_fail/duplicate_bitcoin_transaction_key.rs:13:5
   |
13 |     bitcoin_transaction = false
   |     ^^^^^^^^^^^^^^^^^^^
